tests/sqlcmd/baselines/errors/stackoverflow.errbaseline
Running a query with lots of predicates in the where clause
     - expect this to generate a stackoverflowerror for the thread it's executing.
